--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,34 +1,38 @@
 [versions]
-accompanistPager = "0.21.2-beta"
-activityCompose = "1.7.2"
-appcompat = "1.6.1"
-coilComposeVersion = "2.3.0"
-composeBom = "2024.06.00"
+accompanistPager = "0.36.0"
+activityCompose = "1.9.2"
+appcompat = "1.7.0"
+coilComposeVersion = "2.7.0"
+composeBom = "2024.09.02"
 compressor = "3.0.1"
-converterGson = "2.9.0"
-coreKtx = "1.9.0"
-daggerVersion = "2.47"
-datastorePreferences = "1.0.0"
-espressoCore = "3.5.1"
-hiltAndroidCompiler = "2.47"
-hiltCompiler = "1.0.0"
-hiltNavigationCompose = "1.0.0"
+converterGson = "2.11.0"
+coreKtx = "1.13.1"
+daggerVersion = "2.52"
+datastorePreferences = "1.1.1"
+espressoCore = "3.6.1"
+hiltAndroidCompiler = "2.52"
+hiltCompiler = "1.2.0"
+hiltNavigationCompose = "1.2.0"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-kotlinCsvJvm = "1.9.2"
-lifecycleRuntimeKtx = "2.6.1"
-material = "1.9.0"
-materialIconsExtended = "1.4.3"
-navigationCompose = "2.5.3"
-okhttp = "5.0.0-alpha.2"
-retrofit = "2.9.0"
-roomCompiler = "2.5.2"
-roomKtx = "2.5.2"
-roomRuntime = "2.5.2"
-runtimeLivedata = "1.5.2"
+junitVersion = "1.2.1"
+kotlinCsvJvm = "1.10.0"
+lifecycleRuntimeKtx = "2.8.6"
+material = "1.12.0"
+materialIconsExtended = "1.7.2"
+navigationCompose = "2.8.1"
+okhttp = "5.0.0-alpha.14"
+retrofit = "2.11.0"
+roomCompiler = "2.6.1"
+roomKtx = "2.6.1"
+roomRuntime = "2.6.1"
+runtimeLivedata = "1.7.2"
 slf4jAndroid = "1.7.25"
-materialAndroid = "1.6.8"
+materialAndroid = "1.7.2"
 documentfile = "1.0.1"
+workRuntimeKtx = "2.9.1"
+hiltWork = "1.2.0"
+kotlin = "2.0.20"
+
 
 [libraries]
 accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanistPager" }
@@ -71,5 +75,9 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 slf4j-android = { module = "org.slf4j:slf4j-android", version.ref = "slf4jAndroid" }
 androidx-material-android = { group = "androidx.compose.material", name = "material-android", version.ref = "materialAndroid" }
 androidx-documentfile = { group = "androidx.documentfile", name = "documentfile", version.ref = "documentfile" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
+androidx-hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltWork" }
 
 [plugins]
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
