--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,9 +3,10 @@ accompanistPager = "0.36.0"
 activityCompose = "1.9.2"
 appcompat = "1.7.0"
 coilComposeVersion = "2.7.0"
-composeBom = "2024.09.02"
+composeBom = "2024.09.03"
 compressor = "3.0.1"
 converterGson = "2.11.0"
+core = "1.12.0"
 coreKtx = "1.13.1"
 daggerVersion = "2.52"
 datastorePreferences = "1.1.1"
@@ -18,20 +19,21 @@ junitVersion = "1.2.1"
 kotlinCsvJvm = "1.10.0"
 lifecycleRuntimeKtx = "2.8.6"
 material = "1.12.0"
-materialIconsExtended = "1.7.2"
-navigationCompose = "2.8.1"
+materialIconsExtended = "1.7.3"
+navigationCompose = "2.8.2"
 okhttp = "5.0.0-alpha.14"
 retrofit = "2.11.0"
 roomCompiler = "2.6.1"
 roomKtx = "2.6.1"
 roomRuntime = "2.6.1"
-runtimeLivedata = "1.7.2"
+runtimeLivedata = "1.7.3"
 slf4jAndroid = "1.7.25"
-materialAndroid = "1.7.2"
+materialAndroid = "1.7.3"
 documentfile = "1.0.1"
 workRuntimeKtx = "2.9.1"
 hiltWork = "1.2.0"
 kotlin = "2.0.20"
+uiTextGoogleFonts = "1.7.3"
 
 
 [libraries]
@@ -65,6 +67,7 @@ androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilComposeVersion" }
 compressor = { module = "id.zelory:compressor", version.ref = "compressor" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+core = { module = "com.composables:core", version.ref = "core" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "daggerVersion" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroidCompiler" }
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -77,6 +80,7 @@ androidx-material-android = { group = "androidx.compose.material", name = "mater
 androidx-documentfile = { group = "androidx.documentfile", name = "documentfile", version.ref = "documentfile" }
 androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
 androidx-hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltWork" }
+androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
 
 [plugins]
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
