--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.artifex.mupdf.viewer.DocumentActivity" />
-        <activity android:name="com.artifex.mupdf.viewer.OutlineActivity" />
+        <activity android:name="com.artifex.mupdf.viewer.NewOutlineActivity" />
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
