--- a/mupdf-lib/build.gradle
+++ b/mupdf-lib/build.gradle
@@ -1,11 +1,23 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
+//apply plugin: 'com.android.application'
+apply plugin: 'org.jetbrains.kotlin.android'
+apply plugin: 'org.jetbrains.kotlin.plugin.compose'
 
 group = 'com.artifex.mupdf'
 version = '1.24.9a'
 
 dependencies {
-	implementation 'androidx.appcompat:appcompat:1.1.+'
+	implementation libs.androidx.appcompat
+	implementation libs.androidx.core.ktx
+	implementation libs.androidx.lifecycle.runtime.ktx
+	implementation libs.androidx.activity.compose
+	implementation platform(libs.androidx.compose.bom)
+	implementation libs.androidx.ui
+	implementation libs.androidx.ui.graphics
+	implementation libs.androidx.ui.tooling.preview
+	implementation libs.androidx.material3
+	implementation(libs.core)
 	if (file('../jni/build.gradle').isFile())
 		api project(':jni')
 	else
@@ -23,6 +35,10 @@ android {
 		singleVariant("release") {
 			withSourcesJar()
 		}
+	}
+
+	buildFeatures {
+		compose true
 	}
 }
 
