--- a/mupdf-lib/build.gradle
+++ b/mupdf-lib/build.gradle
@@ -8,77 +8,85 @@ group = 'com.artifex.mupdf'
 version = '1.24.9a'
 
 dependencies {
-	implementation libs.androidx.appcompat
-	implementation libs.androidx.core.ktx
-	implementation libs.androidx.lifecycle.runtime.ktx
-	implementation libs.androidx.activity.compose
-	implementation platform(libs.androidx.compose.bom)
-	implementation libs.androidx.ui
-	implementation libs.androidx.ui.graphics
-	implementation libs.androidx.ui.tooling.preview
-	implementation libs.androidx.material3
-	implementation(libs.core)
-	if (file('../jni/build.gradle').isFile())
-		api project(':jni')
-	else
-		api 'com.artifex.mupdf:fitz:1.24.9'
+    implementation libs.androidx.appcompat
+    implementation libs.androidx.core.ktx
+    implementation libs.androidx.lifecycle.runtime.ktx
+    implementation libs.androidx.activity.compose
+    implementation platform(libs.androidx.compose.bom)
+    implementation libs.androidx.ui
+    implementation libs.androidx.ui.graphics
+    implementation libs.androidx.ui.tooling.preview
+    implementation libs.androidx.material3
+    implementation libs.core
+    implementation libs.material
+
+    if (file('../jni/build.gradle').isFile())
+        api project(':jni')
+    else
+        api 'com.artifex.mupdf:fitz:1.24.9'
 }
 
 android {
-	namespace = "com.artifex.mupdf"
-	compileSdkVersion 33
-	defaultConfig {
-		minSdkVersion 21
-		targetSdkVersion 34
-	}
-	publishing {
-		singleVariant("release") {
-			withSourcesJar()
-		}
-	}
-
-	buildFeatures {
-		compose true
-	}
+    namespace = "com.artifex.mupdf.viewer"
+    compileSdk 34
+    defaultConfig {
+        minSdkVersion 24
+        targetSdkVersion 34
+    }
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+        }
+    }
+    buildFeatures {
+        compose true
+    }
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 project.afterEvaluate {
-	publishing {
-		publications {
-			release(MavenPublication) {
-				artifactId 'viewer'
-				artifact(bundleReleaseAar)
+    publishing {
+        publications {
+            release(MavenPublication) {
+                artifactId 'viewer'
+                artifact(bundleReleaseAar)
 
-				pom {
-					name = 'viewer'
-					url = 'http://www.mupdf.com'
-					licenses {
-						license {
-							name = 'GNU Affero General Public License'
-							url = 'https://www.gnu.org/licenses/agpl-3.0.html'
-						}
-					}
-				}
-				pom.withXml {
-					final dependenciesNode = asNode().appendNode('dependencies')
-					configurations.implementation.allDependencies.each {
-						def dependencyNode = dependenciesNode.appendNode('dependency')
-						dependencyNode.appendNode('groupId', it.group)
-						dependencyNode.appendNode('artifactId', it.name)
-						dependencyNode.appendNode('version', it.version)
-					}
-				}
-			}
-		}
-		repositories {
-			maven {
-				name 'Local'
-				if (project.hasProperty('MAVEN_REPO')) {
-					url = MAVEN_REPO
-				} else {
-					url = "file://${System.properties['user.home']}/MAVEN"
-				}
-			}
-		}
-	}
+                pom {
+                    name = 'viewer'
+                    url = 'http://www.mupdf.com'
+                    licenses {
+                        license {
+                            name = 'GNU Affero General Public License'
+                            url = 'https://www.gnu.org/licenses/agpl-3.0.html'
+                        }
+                    }
+                }
+                pom.withXml {
+                    final dependenciesNode = asNode().appendNode('dependencies')
+                    configurations.implementation.allDependencies.each {
+                        def dependencyNode = dependenciesNode.appendNode('dependency')
+                        dependencyNode.appendNode('groupId', it.group)
+                        dependencyNode.appendNode('artifactId', it.name)
+                        dependencyNode.appendNode('version', it.version)
+                    }
+                }
+            }
+        }
+        repositories {
+            maven {
+                name 'Local'
+                if (project.hasProperty('MAVEN_REPO')) {
+                    url = MAVEN_REPO
+                } else {
+                    url = "file://${System.properties['user.home']}/MAVEN"
+                }
+            }
+        }
+    }
 }
