--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ android.useAndroidX=true
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.unsafe.configuration-cache=true
+ksp.incremental=false
