--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,6 +35,7 @@ workRuntimeKtx = "2.9.1"
 hiltWork = "1.2.0"
 kotlin = "2.0.20"
 uiTextGoogleFonts = "1.7.3"
+agp = "8.1.1"
 
 
 [libraries]
@@ -87,3 +88,4 @@ androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text
 [plugins]
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+android-library = { id = "com.android.library", version.ref = "agp" }
