--- a/mupdf-lib/build.gradle
+++ b/mupdf-lib/build.gradle
@@ -31,7 +31,7 @@ android {
     compileSdk 34
     defaultConfig {
         minSdkVersion 24
-        targetSdkVersion 34
+        targetSdkVersion 35
     }
     publishing {
         singleVariant("release") {
@@ -88,5 +88,11 @@ project.afterEvaluate {
                 }
             }
         }
+    }
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
