--- a/mupdf-lib/src/main/AndroidManifest.xml
+++ b/mupdf-lib/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
 			</intent-filter>
 		</activity>
 		<activity
-			android:name=".NewOutlineActivity"
+			android:name=".LLOutlineActivity"
 			android:configChanges="orientation|screenSize|keyboardHidden"
 			>
 		</activity>
