Basic compose viewer (unoptimized)

--- a/mupdf-lib/build.gradle
+++ b/mupdf-lib/build.gradle
@@ -19,6 +19,12 @@ dependencies {
     implementation libs.androidx.material3
     implementation libs.core
     implementation libs.material
+    implementation libs.androidx.material.icons.extended
+    implementation libs.androidx.lifecycle.viewmodel.compose
+    implementation libs.coil.compose
+
+    debugImplementation libs.androidx.ui.tooling
+    debugImplementation libs.androidx.ui.test.manifest
 
     if (file('../jni/build.gradle').isFile())
         api project(':jni')
