update progress from viewer instead of sending data back to activity

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ local.properties
 /.idea/deploymentTargetDropDown.xml
 mupdf-lib/build/
 /.kotlin/
+/document-viewer/build/generated/ksp/debug/java/
+/document-viewer/build/generated/ksp/debug/kotlin/
+/document-viewer/build/generated/ap_generated_sources/debug/out/
