--- a/document-viewer/build.gradle
+++ b/document-viewer/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
     implementation libs.hilt.android
     implementation libs.androidx.hilt.navigation.compose
+    implementation project(':core:settings')
     ksp libs.androidx.hilt.compiler
     ksp libs.hilt.android.compiler
 
