--- a/document-viewer/src/main/AndroidManifest.xml
+++ b/document-viewer/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<application>
 		<activity
-			android:name=".LLDocumentActivity"
+			android:name="com.enoch02.viewer.LLDocumentActivity"
 			android:configChanges="orientation|screenSize|keyboardHidden"
 			android:exported="true"
 			>
