feature: add licenses screen

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+aboutlibrariesComposeM3 = "11.3.0-rc02"
 activityCompose = "1.9.3"
 appcompat = "1.7.0"
 coilComposeVersion = "2.7.0"
@@ -40,6 +41,7 @@ zoomable = "0.14.0"
 
 
 [libraries]
+aboutlibraries-compose-m3 = { module = "com.mikepenz:aboutlibraries-compose-m3", version.ref = "aboutlibrariesComposeM3" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
