--- a/document-viewer/build.gradle
+++ b/document-viewer/build.gradle
@@ -34,8 +34,7 @@ dependencies {
     ksp libs.androidx.hilt.compiler
     ksp libs.hilt.android.compiler
 
-    implementation libs.zoomable //TODO: remove
-    implementation "me.saket.telephoto:zoomable-image-coil:0.15.0"
+    implementation libs.zoomable.image.coil
 
     debugImplementation libs.androidx.ui.tooling
     debugImplementation libs.androidx.ui.test.manifest
