chore: increment compile sdk versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 kotlin.code.style=official
-#org.gradle.jvmargs=-Xmx4608m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4608m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 org.gradle.unsafe.configuration-cache=true
 ksp.incremental=false
